Seq Spans: vertical align is now positive (-4px changed to 4px). In order to fix MS Office bug

--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -524,7 +524,7 @@
         span {
           border-radius: 2px;
 
-          vertical-align: -4px;
+          vertical-align: 4px;
           text-align: center;
           overflow: hidden;
         }
